# 20240328
- Added Database definition
- Updated `README.md`.

# 20240401
- Added Permission Addition & Deletion Logics
- Updated the database to ORM

# 20240407
- Added Command Permission Checks
- Create the Global Admin checking command
- Dispose Database connection upon extension unload (Clenaup)

# 20240411
- Added UserSelect component callback
- Fix database initialise system